# range-program

./: .gitignore  README.md  pyproject.toml
docs/: etap-10.md  etap-11.md  etap-12.md  etap-13.md  etap-14.md  etap-15.md  etap-2.md  etap-3.md  etap-4.md  etap-5.md  etap-6.md  etap-7.md  etap-8.md  etap-9.md  instrukciya.md  plan.md
src/range_program/: __init__.py  __main__.py  check_all_report.py  cli.py  config.py  display_helpers.py  history_view.py  logging_config.py  menu.py  validation.py
src/range_program/models/: __init__.py  active_range.py  backtest_result.py  candle.py  check_result.py  coin.py  defaults.py  grid_config.py  market_symbol_match.py  mode_result.py  recommended_range.py
src/range_program/repositories/: __init__.py  check_history_repository.py  coin_repository.py
src/range_program/services/: __init__.py  backtest.py  check_service.py  coin_service.py  evaluator.py  market_data.py  optimizer.py  range_engine.py  recalc_service.py  recommended_range_freshness.py  timeframe_utils.py
tests/: __init__.py  test_backtest.py  test_check_all_report.py  test_check_history_repository.py  test_check_service.py  test_cli_resolve_market.py  test_coin_repository.py  test_coin_service.py  test_evaluator.py  test_grid_config.py  test_market_data.py  test_menu.py  test_optimizer.py  test_range_engine.py  test_recalc_service.py
